# mydiff

./: ChangeLog  README.rst  setup.cfg  setup.py
mydiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json
mydiff/cmd/: api.py
