[metadata]
name = mydiff
description = 
	README.rst
author-email = 1394812183@qq.com
url = https://github.com/hrzq19901209/mydiff
classifiers = []
license = Apache-2
summary = Service

[files]
packages = 
	mydiff

[entry_points]
console_scripts = 
	mydiff = mydiff.cmd.api:main

[global]
setup-hook = 
	pbr.hooks.setup_hook